recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: type mismatch;
 found   : List[Int]
 required: Int
		return l::butLast(l.tail)
                        ^